# dns-suite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
dns_core/: Cargo.toml
dns_core/src/: buffer.rs  header.rs  lib.rs  packet.rs  question.rs  record.rs  types.rs
dns_core/tests/: buffer_tests.rs  coverage.rs  header_tests.rs  packet_tests.rs  question_tests.rs  record_tests.rs  types_tests.rs
dns_parser/: Cargo.toml
dns_parser/src/: buffer.rs  packet.rs  question.rs  record.rs
example/: Cargo.toml
example/src/: main.rs
src/: main.rs
