[package]
name = "example"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "DNS query CLI built on dns_core"

[dependencies]
dns_core = { workspace = true }
